# itk_explorer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  registration_experiment.sh
.githooks/: pre-commit
experiment_results_1/: mono_log.txt  motion_correction_log.txt
experiment_results_2/: SUMMARY.txt  motion_correction_log.txt  multi_log.txt
experiment_results_3/: SUMMARY.txt  motion_correction_log.txt  multi_log.txt
experiment_results_4/: SUMMARY.txt  motion_correction_log.txt  multi_log.txt
experiment_results_5/: motion_log.txt  multi_log.txt
include/evaluation/: LandmarkEvaluation.h  Metrics.hpp
include/filters/: Filtering.hpp  Intensity.hpp
include/io/: ImageIO.hpp
include/landmarks/: LandmarkIO.h
include/registration/: BSplineRegistration.hpp  MultiModalRegistration.h  Registration.hpp
include/segmentation/: Segmentation.hpp
include/visualization/: Visualization.hpp
src/evaluation/: CMakeLists.txt  LandmarkEvaluation.cpp  README.md  metrics_main.cpp
src/filters/: CMakeLists.txt  README.md  filters_main.cpp  normalize_main.cpp
src/io/: CMakeLists.txt  io_main.cpp
src/landmarks/: CMakeList.txt  CMakeLists.txt  LandmarkIO.cpp
src/registration/: CMakeLists.txt  MultiModalRegistration.cpp  README.md  batch_main.cpp  bspline_main.cpp  multimodal_reg_main.cpp  reg_main.cpp
src/segmentation/: CMakeLists.txt  README.md  seg_main.cpp
src/utilities/: CMakeLists.txt  resample_to_reference.cpp  simulate_motion.cpp
src/visualization/: CMakeLists.txt  README.md  extract_slice_main.cpp  vis_main.cpp
